--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-test",
   "version": "1.0.0",
-  "description": "博客项目，nodejs测试",
+  "description": "express、mongodb、搭建博客",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,17 +11,29 @@
     "url": "git+https://github.com/xuess/node-test.git"
   },
   "keywords": [
-    "node",
-    "express"
+    "express",
+    "mongodb"
   ],
-  "author": "xuess <wuniu2010@126.com>",
+  "author": "xuess",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/xuess/node-test/issues"
   },
   "homepage": "https://github.com/xuess/node-test#readme",
   "dependencies": {
+    "config-lite": "^1.6.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
     "ejs": "^2.5.6",
-    "express": "^4.14.0"
+    "express": "^4.15.2",
+    "express-formidable": "^1.0.0",
+    "express-session": "^1.15.2",
+    "express-winston": "^2.3.0",
+    "marked": "^0.3.6",
+    "moment": "^2.18.1",
+    "mongolass": "^2.4.5",
+    "objectid-to-timestamp": "^1.3.0",
+    "sha1": "^1.1.1",
+    "winston": "^2.3.1"
   }
 }
