--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "express、mongodb、搭建博客",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	  "test": "node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha"
   },
   "repository": {
     "type": "git",
@@ -30,10 +30,15 @@
     "express-session": "^1.15.2",
     "express-winston": "^2.3.0",
     "marked": "^0.3.6",
+    "mocha": "^3.2.0",
     "moment": "^2.18.1",
     "mongolass": "^2.4.5",
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
+    "supertest": "^3.0.0",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.5"
   }
 }
